--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.1.3",
     "expo": "~46.0.9",
+    "expo-constants": "^14.0.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.5",
+    "formik": "^2.2.9",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "^0.69.5",
     "react-native-dotenv": "^3.3.1",
+    "react-native-dropdown-select-list": "^2.0.2",
     "react-native-elements": "^3.4.2",
+    "react-native-formik": "^1.7.8",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
@@ -32,7 +38,9 @@
     "react-native-web": "^0.18.10",
     "react-redux": "^8.0.2",
     "react-request": "^3.2.0",
-    "twrnc": "^3.4.0"
+    "recompose": "^0.30.0",
+    "twrnc": "^3.4.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
