--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-native-elements": "^3.4.2",
     "react-native-formik": "^1.7.8",
     "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-maps": "^1.3.2",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-tomtom-maps": "^0.0.1-alpha.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
     "react-redux": "^8.0.2",
