--- a/package.json
+++ b/package.json
@@ -1,41 +1,40 @@
 {
   "name": "tuktuk",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@draftbit/ui": "^46.4.3",
     "@expo/webpack-config": "^0.17.0",
-    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.8.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@rnmapbox/maps": "rnmapbox/maps#main",
     "axios": "^1.1.3",
     "expo": "~46.0.9",
     "expo-constants": "^14.0.2",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.5",
     "formik": "^2.2.9",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "^0.69.5",
+    "react-native": "0.69.6",
     "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-elements": "^3.4.2",
     "react-native-formik": "^1.7.8",
     "react-native-google-places-autocomplete": "^2.4.1",
-    "react-native-maps": "^1.3.2",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-textfield": "^0.16.1",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-tomtom-maps": "^0.0.1-alpha.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
     "react-native-webview": "11.23.0",
